Features and Bug fixes: - Implement CSV export to API and upload to AWS S3 - Added a Clock configuration class and a csv util class - Added Terraform files for S3 support - Added unit tests for some methods in the service layer and AWS services - Skipped Tests in the docker build of the spring app when running mvn